/* Navigation */
"Ana Sayfa" = "Home";
"Canlı TV" = "Live TV";
"Film" = "Movie";
"Dizi" = "Series";
"Filmler" = "Movies";
"Diziler" = "Series";
"Favoriler" = "Favorites";
"Ara" = "Search";
"Ayarlar" = "Settings";
"Ayarlar'a git" = "Go to Settings";

...
